Restructuring directories (and other stuff...)

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,9 @@ original
 *.pyc
 beagle/
 numila/__pycache__/
+PhillipsPearl_Corpora/
+numila/log.txt
+numila/numila.sublime-project
+numila/numila.sublime-workspace
+umila.sublime-project
+umila.sublime-workspace
