Speaking doesn't work very well...

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ numila/numila.sublime-project
 numila/numila.sublime-workspace
 umila.sublime-project
 umila.sublime-workspace
+numila/corpora/
+numila/pickles/
