Numila can use either graph implementation

--- a/numila/params.yml
+++ b/numila/params.yml
@@ -1,13 +1,17 @@
+GRAPH: holograph
 SEMANTIC_TRANSFER: 0.0
 LEARNING_RATE: 0.2
 DECAY_RATE: 0.001
 
-CHUNK_THRESHOLD: 0.3
+EXEMPLAR_THRESHOLD: 0.3
 BIND_OPERATION: addition
 GENERALIZE: 0.0
 
 FTP_PREFERENCE: 0.5
+CHUNK_LEARNING: 0.2
 MEMORY_SIZE: 4
 
-DIM: 1000
+DIM: 10000
 PERCENT_NON_ZERO: 0.005
+
+ADD_BOUNDARIES: false
