Add CHUNK_THRESHOLD param

--- a/numila/params.yml
+++ b/numila/params.yml
@@ -3,6 +3,7 @@ SEMANTIC_TRANSFER: 0.0
 LEARNING_RATE: 0.2
 DECAY_RATE: 0.001
 
+CHUNK_THRESHOLD: 0.1
 EXEMPLAR_THRESHOLD: 0.3
 BIND_OPERATION: addition
 GENERALIZE: 0.0
