refactoring and bug fixing

--- a/numila/params.yml
+++ b/numila/params.yml
@@ -6,7 +6,7 @@ DECAY_RATE: 0.001
 CHUNK_THRESHOLD: 0.1
 EXEMPLAR_THRESHOLD: 0.3
 BIND_OPERATION: addition
-GENERALIZE: 0.0
+GENERALIZE: false
 
 FTP_PREFERENCE: 0.5
 CHUNK_LEARNING: 0.2
