--- a/numila/params.yml
+++ b/numila/params.yml
@@ -3,16 +3,17 @@ SEMANTIC_TRANSFER: 0.0
 LEARNING_RATE: 0.2
 DECAY_RATE: 0.001
 
-CHUNK_THRESHOLD: 0.1
+CHUNK_THRESHOLD: 0.3
 EXEMPLAR_THRESHOLD: 0.3
 BIND_OPERATION: addition
 GENERALIZE: false
 
 FTP_PREFERENCE: 0.5
-CHUNK_LEARNING: 0.2
+CHUNK_LEARNING: .2
 MEMORY_SIZE: 4
 
 DIM: 10000
 PERCENT_NON_ZERO: 0.005
+ID_VECTOR_COMPOSITION: false
 
 ADD_BOUNDARIES: false
