--- a/numila/params.yml
+++ b/numila/params.yml
@@ -3,12 +3,12 @@ SEMANTIC_TRANSFER: 0.0
 LEARNING_RATE: 0.2
 DECAY_RATE: 0.001
 
-CHUNK_THRESHOLD: 0.3
+CHUNK_THRESHOLD: null
 EXEMPLAR_THRESHOLD: 0.3
 BIND_OPERATION: addition
 GENERALIZE: false
 
-FTP_PREFERENCE: 0.5
+FTP_PREFERENCE: 1
 CHUNK_LEARNING: .2
 MEMORY_SIZE: 4
 
