analysis for UBL abstract

--- a/numila/params.yml
+++ b/numila/params.yml
@@ -1,10 +1,10 @@
 GRAPH: holograph
 SEMANTIC_TRANSFER: 0.0
-LEARNING_RATE: 0.2
-DECAY_RATE: 0.001
+LEARNING_RATE: 0.1
+DECAY: false
 
 CHUNK_THRESHOLD: null
-EXEMPLAR_THRESHOLD: 0.3
+EXEMPLAR_THRESHOLD: 0.2
 BIND_OPERATION: addition
 GENERALIZE: false
 
