move parse to separate file, implement new parsing algo

--- a/numila/params.yml
+++ b/numila/params.yml
@@ -1,6 +1,8 @@
 GRAPH: holograph
 SEMANTIC_TRANSFER: 0.0
 LEARNING_RATE: 0.1
+LEARN_MODE: old
+DEPTH: 0
 DECAY: false
 
 CHUNK_THRESHOLD: null
@@ -9,7 +11,7 @@ BIND_OPERATION: addition
 GENERALIZE: false
 
 FTP_PREFERENCE: 1
-CHUNK_LEARNING: .2
+CHUNK_LEARNING: 0.0
 MEMORY_SIZE: 4
 
 DIM: 10000
