--- a/numila/params.yml
+++ b/numila/params.yml
@@ -9,6 +9,7 @@ CHUNK_THRESHOLD: null
 EXEMPLAR_THRESHOLD: 0.2
 BIND_OPERATION: addition
 GENERALIZE: false
+COMPOSITION: false
 
 FTP_PREFERENCE: 1
 CHUNK_LEARNING: 0.0
