--- a/numila/params.yml
+++ b/numila/params.yml
@@ -9,7 +9,9 @@ CHUNK_THRESHOLD: null
 EXEMPLAR_THRESHOLD: 0.2
 BIND_OPERATION: addition
 GENERALIZE: false
+DYNAMIC: null
 COMPOSITION: false
+COMP2: false
 
 FTP_PREFERENCE: 1
 CHUNK_LEARNING: 0.0
