finish batch parse

--- a/numila/params.yml
+++ b/numila/params.yml
@@ -1,5 +1,4 @@
 GRAPH: holograph
-SEMANTIC_TRANSFER: 0.0
 LEARNING_RATE: 0.1
 LEARN_MODE: old
 DEPTH: 0
@@ -8,6 +7,7 @@ DECAY: false
 CHUNK_THRESHOLD: null
 EXEMPLAR_THRESHOLD: 0.2
 BIND_OPERATION: addition
+HIERARCHICAL: true
 GENERALIZE: false
 DYNAMIC: null
 COMPOSITION: false
