polishing generalizatino and composition

--- a/numila/params.yml
+++ b/numila/params.yml
@@ -1,24 +1,21 @@
-GRAPH: holograph
+PARSE: greedy
 LEARNING_RATE: 0.1
-LEARN_MODE: old
 DEPTH: 0
 DECAY: false
-
-CHUNK_THRESHOLD: null
 EXEMPLAR_THRESHOLD: 0.2
-BIND_OPERATION: addition
+CHUNK_THRESHOLD: null
+FTP_PREFERENCE: 1
+CHUNK_LEARNING: 0.0
+MEMORY_SIZE: 4
+ADD_BOUNDARIES: false
+
 HIERARCHICAL: true
 GENERALIZE: false
 DYNAMIC: null
 COMPOSITION: false
-PARSE: incremental
 
-FTP_PREFERENCE: 1
-CHUNK_LEARNING: 0.0
-MEMORY_SIZE: 4
-
+GRAPH: holograph
 DIM: 10000
 PERCENT_NON_ZERO: 0.005
 BIND: false
-
-ADD_BOUNDARIES: false
+BIND_OPERATION: addition
