continued writing and simulations

--- a/numila/params.yml
+++ b/numila/params.yml
@@ -4,7 +4,7 @@ DEPTH: 0
 DECAY: false
 EXEMPLAR_THRESHOLD: 0.2
 CHUNK_THRESHOLD: null
-FTP_PREFERENCE: 1
+BTP_PREFERENCE: 1
 CHUNK_LEARNING: 0.0
 MEMORY_SIZE: 4
 ADD_BOUNDARIES: false
@@ -17,5 +17,5 @@ COMPOSITION: false
 GRAPH: holograph
 DIM: 10000
 PERCENT_NON_ZERO: 0.005
-BIND: false
 BIND_OPERATION: addition
+INITIAL_ROW: 1
