--- a/numila/params.yml
+++ b/numila/params.yml
@@ -1,13 +1,14 @@
 PARSE: greedy
-LEARNING_RATE: 0.1
+LEARNING_RATE: 0.2
 DEPTH: 0
 DECAY: false
-EXEMPLAR_THRESHOLD: 0.2
+EXEMPLAR_THRESHOLD: 0.3
 CHUNK_THRESHOLD: null
 BTP_PREFERENCE: 1
 CHUNK_LEARNING: 0.0
 MEMORY_SIZE: 4
-ADD_BOUNDARIES: false
+ADD_BOUNDARIES: true
+SPEAK: markov
 
 HIERARCHICAL: true
 GENERALIZE: false
@@ -18,4 +19,4 @@ GRAPH: holograph
 DIM: 10000
 PERCENT_NON_ZERO: 0.005
 BIND_OPERATION: addition
-INITIAL_ROW: 1
+INITIAL_ROW: 4
