almost at a full draft

--- a/numila/params.yml
+++ b/numila/params.yml
@@ -2,8 +2,7 @@ PARSE: greedy
 LEARNING_RATE: 0.2
 DEPTH: 0
 DECAY: false
-EXEMPLAR_THRESHOLD: 0.3
-CHUNK_THRESHOLD: null
+CHUNK_THRESHOLD: 0.3
 BTP_PREFERENCE: 1
 MEMORY_SIZE: 4
 ADD_BOUNDARIES: true
